--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ gunicorn==20.0.4
 helpers==0.2.0
 idna==2.10
 ipykernel==5.3.4
+ipython
 ipython-genutils==0.2.0
 itsdangerous==1.1.0
 jedi==0.17.2
